tests/knowledge/testing-accounts-data/account-data-us-east-1-has-no-default-vpc/test/ap-southeast-2/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-223cf25c",
                    "NetworkAclId": "acl-28098c4e",
                    "SubnetId": "subnet-6b3bcb23"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-253cf25b",
                    "NetworkAclId": "acl-28098c4e",
                    "SubnetId": "subnet-5a166702"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-243cf25a",
                    "NetworkAclId": "acl-28098c4e",
                    "SubnetId": "subnet-2965a24f"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-28098c4e",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-d4809fb3"
        }
    ]
}
